fixed alignement footer

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -16,6 +16,7 @@ footer {
 
 	ul {
 		list-style-type: none;
+		text-align: left;
 
 		li a {
 			color: white;
